# todo-app

./: .gitignore  README.md  thoerie.md
backend/: .env  Cargo.toml  Makefile
backend/src/: app.rs  database.rs  logic.rs  main.rs
backend/src/app/: app_data.rs  core.rs  handlers.rs
backend/src/logic/: core.rs
backend/src/logic/auth/: github.rs
frontend/: index.html  script.js  styles.css
