[package]
name = "todo-app-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = ["cookies"] }
actix-cors = "0.7"
oauth2 = "5"
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
serde = "1"
serde_json = "1"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
